Changes in eiwild version 0.6.7
- added warning in plotResult

Changes in eiwild version 0.6.6
- fixed bug in plotResult(abs=FALSE) with color break points
- erased strange code line in convertEiData

Changes in eiwild version 0.6.5
- fixed small bug in error message of convertEiData()

Changes in eiwild version 0.6.4
- fixed major bug in runMBayes(). It wasn't functioning properly with other hyperpriori distributions than gamma with one parameter 
- added new example to runMBayes() and indAggEi()

Changes in eiwild version 0.6.3
- changed Description file (added URL)
- fixed small bug in prioriPlot()

Changes in eiwild version 0.6.2
- Fixed a few spelling mistakes

Changes in eiwild version 0.6.1
- Added ?eiwild

Changes in eiwild version 0.6
- First CRAN version

version 0.5 (16.12.13)
- the release version of the masterthesis 