@@ -7,7 +7,7 @@ Description: This package allows to use the hybrid Multinomial-Dirichlet-Model
     possibility to use individual level data to support the aggregate level
     data and using different Hyperpriori-Distributions.
 Version: 0.6.7
-Date: 2014-02-24
+Date: 2014-03-04
 Author: Thomas Schlesinger <tho.schlesinger@gmail.com>
 Maintainer: Thomas Schlesinger <tho.schlesinger@gmail.com>
 Depends:
